Closed Bug 1316544 Opened 8 years ago Closed 8 years ago

[WebGL2 conformance test] Pass 2/conformance2/textures/misc/copy-texture-image-webgl-specific.html

Categories

(Core :: Graphics: CanvasWebGL, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox50 --- disabled
firefox51 --- fixed
firefox52 --- fixed
firefox53 --- fixed

People

(Reporter: cleu, Assigned: cleu)

Details

Attachments

(1 file, 1 obsolete file)

We misjudge testcase "copytexsubimage3d_valid_operation_diff_layer" as a copy feed back loop, so we need some kind of depth checking to correct this failure.

https://www.khronos.org/registry/webgl/sdk/tests/conformance2/textures/misc/copy-texture-image-webgl-specific.html?webglVersion=2&quiet=0
Assignee: nobody → cleu
Attachment #8809318 - Attachment description: WIP Fix conformance test fail in texture image webgl specific → Fix conformance test fail in texture image webgl specific
Attachment #8809318 - Flags: review?(ethlin)
Comment on attachment 8809318 [details] [diff] [review]
Fix conformance test fail in texture image webgl specific

:jgilbert should know more about this.
Attachment #8809318 - Flags: review?(ethlin) → review?(jgilbert)
Attachment #8809318 - Flags: review?(jgilbert) → review+
Change uint32_t to GLint to prevent compile time error caused by comparing signed and unsigned integer
Attachment #8809318 - Attachment is obsolete: true
Attachment #8812066 - Flags: review+
Keywords: checkin-needed
Pushed by cbook@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/9dc2ef01f861
Fix conformance test fail in texture-image-webgl-specific r=jgilbert
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/9dc2ef01f861
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Comment on attachment 8812066 [details] [diff] [review]
Fix conformance test fail in texture image webgl specific r=jgilbert

Review of attachment 8812066 [details] [diff] [review]:
-----------------------------------------------------------------

::: dom/canvas/WebGLTextureUpload.cpp
@@ +1926,4 @@
>          MOZ_ASSERT(attach);
>  
>          if (attach->Texture() == this &&
> +            attach->Layer() == layer &&

Layer() should be returning uint32_t.
Attachment #8812066 - Flags: feedback-
Comment on attachment 8812066 [details] [diff] [review]
Fix conformance test fail in texture image webgl specific r=jgilbert

Approval Request Comment
[Feature/Bug causing the regression]: webgl2
[User impact if declined]:
[Is this code covered by automated tests?]:
[Has the fix been verified in Nightly?]:
[Needs manual test from QE? If yes, steps to reproduce]: 
[List of other uplifts needed for the feature/fix]:
[Is the change risky?]:
[Why is the change risky/not risky?]:
[String changes made/needed]:
Attachment #8812066 - Flags: approval-mozilla-beta?
Attachment #8812066 - Flags: approval-mozilla-aurora?
Attachment #8812066 - Flags: feedback-
Comment on attachment 8812066 [details] [diff] [review]
Fix conformance test fail in texture image webgl specific r=jgilbert

WebGL2 related patch. Beta51+ & Aurora52+. Should be in 51 beta 8.
Attachment #8812066 - Flags: approval-mozilla-beta?
Attachment #8812066 - Flags: approval-mozilla-beta+
Attachment #8812066 - Flags: approval-mozilla-aurora?
Attachment #8812066 - Flags: approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: