Bug 1316544 - Fix conformance test fail in texture-image-webgl-specific r=jgilbert a=gchang

--HG--
extra : rebase_source : 53ea27e91d617146d7f3a3785ab816f506443c04
extra : source : 9dc2ef01f861a6e710d885f074f5f7cee5207471